--- a/relatedWork/bartercast.tex
+++ b/relatedWork/bartercast.tex
@@ -109,10 +109,8 @@ BarterCasts knows which entries are relevant by keeping track of the last synchr
 and only using new barter records since that point.
 
 \subsection{Limitation}
-The proposal of this thesis is to implement a new reputation system for Tribler,
-so obviously Bartercast is lacking.
-The main problem with Bartercast, and why it needs to be replaced with a new system is
-that the reputation is self reported.
+The main limitation of Bartercast is that the reputation is self reported.
+This assumes the majority of nodes to be honest and to follow protocol.
 Barter records are not signed by any one else.
 So Barter records can be created by any malicious node without a limit.
 There is no way to verify these records and enforce truthfulness.
