Added clarification problems

--- a/problems/branch.tex
+++ b/problems/branch.tex
@@ -3,12 +3,14 @@
 In this section we will explain an attack that can be done by a malicious node M.
 The attack consists of obscuring a part of his transaction history.
 M creates a new branch of his transaction history that is more favourable to him.
+This is double spending of reputation.
 
 \subsection{Alternating partial transaction history}
 A malicious node M has his own chain of transactions
 and he wants to falsify his transactions after a certain point.
 He wants to rewrite his transaction history from that point and create an alternate transaction history.
 M wants to do this to whitewash his reputation.
+For example he could have downloaded large amounts without contributing himself with uploading data.
 The node can simply choose to forget and obscure blocks after that point.
 A new branch will be created by chaining new blocks to the desired point in history.
 
