--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -6,7 +6,7 @@ Tribler expands the BitTorrent protocol and has added multiple improvements on t
 The focus of Tribler is two fold:
 \begin{itemize}
     \item Make secure and private use of the Internet the default for every user.
-    \item Make it impossible to shut the infrastructure of the Internet down.
+    \item Make it impossible to shut Tribler down without shutting down the infrastructure of the Internet itself down.
 \end{itemize}
 
 A fully distributed program, not relying on any central component, is needed to achieve these goals.
