Added Tanaskoski as source

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -66,6 +66,13 @@
   publisher={TU Delft, Delft University of Technology}
 }
 
+@phdthesis{tanaskoski-anonymous,
+  title={Anonymous HD video streaming},
+  author={Tanaskoski, Risto JH},
+  year={2014},
+  school={TU Delft, Delft University of Technology}
+}
+
 @book{logiotatidis-splash,
   title={Splash: data synchronization in unmanaged, untrusted peer-to-peer networks},
   author={Logiotatidis, Giorgos},
@@ -365,19 +372,21 @@
 }
 
 @MISC{Cohen-bittorrent,
-	title = {The BitTorrent protocol specification},
-	author = {Cohen, Bram},
-	year = {2008},
-	publisher = {BITTORRENT},
-	howpublished = {\url{https://www.bittorrent.org/beps/bep_0003.html}}
+	title={The BitTorrent protocol specification},
+	author={Cohen, Bram},
+	year={2008},
+	publisher={BITTORRENT},
+	howpublished={\url{https://www.bittorrent.org/beps/bep_0003.html}}
 }
 
 @inproceedings{cohen-titfortat,
   title={Incentives build robustness in BitTorrent},
   author={Cohen, Bram},
+  booktitle={Workshop on Economics of Peer-to-Peer systems},
+  volume={6},
+  pages={68--72},
   year={2003}
 }
-
 
 @incollection{asokan-fairexchange,
   title={Optimistic fair exchange of digital signatures},
