--- a/design/anonymity.tex
+++ b/design/anonymity.tex
@@ -1,6 +1,6 @@
 \section{Anonymity}
 Tribler has made an effort in providing a way for users to download anonymously
-\cite{Plak-anonymous}\cite{ruigrok-anonymous}.
+\cite{Plak-anonymous}\cite{ruigrok-anonymous}\cite{tanaskoski-anonymous}.
 There is anonymity in the contents of what is downloaded, not in how much is downloaded.
 MultiChain obviously cannot break this anonymity to be usuable for anonymous downloads.
 The introduction of anonymity increases the necessity of a good reputation system as more data has to be transferred.
