--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -60,10 +60,10 @@ This requires a tamper-proof interaction history to base reputation on in a netw
 Those contributing more receive more help in return,
 and malicious nodes cannot abuse the network by tampering with the interaction history.
 
-Tribler has recently implemented anonymous connections using onion routing \\\cite{Plak-anonymous}\cite{ruigrok-anonymous}.
+Tribler has recently implemented anonymous connections using onion routing \\\cite{Plak-anonymous}\cite{ruigrok-anonymous}\cite{tanaskoski-anonymous}.
 This feature allows downloaders to become indistinguishable from other users in the network.
 But every data packet has to be forwarded
-by a number of intermediate hops between the downloader and seeder\cite{Plak-anonymous}.
+by a number of intermediate hops between the downloader and seeder\cite{Plak-anonymous}\cite{tanaskoski-anonymous}.
 The total cost of bandwidth per file is increased,
 but also the number of nodes helping a single node downloading a file increases.
 This increases the necessity of an incentive system to reward collaboration.
