--- a/design/design.tex
+++ b/design/design.tex
@@ -14,7 +14,7 @@ These versions are downloaded by peers.
 A community provides a set of messages and endpoints for other peers.
 The community can communicate with the endpoints of other peers as well and send a message to these endpoints.
 Other peers are automatically discovered using Dispersy.
-Examples of communities are the TunnelCommunity that adds functionality to download anonymously\cite{Plak-anonymous}
+Examples of communities are the TunnelCommunity that adds functionality to download anonymously\cite{Plak-anonymous}\cite{tanaskoski-anonymous}
 or the AllChannelCommunity to distribute torrent files.
 Our system will be implemented by adding a new community to Tribler.
 
