Experimentation added section division for Anonymous experiments

--- a/experimentation/chain/chain-experiment.tex
+++ b/experimentation/chain/chain-experiment.tex
@@ -38,6 +38,9 @@ In the following experiment we mimick a download of 10 GB with a speed of 1000 K
 The rest of the setup is the same as in the previous example
 and the result is plotted in the same way in Figure \ref{fig:chain-experiment-amounts-long}.
 The individual points are obscured by the large amount of points in the figure.
+The graph of the MultiChain would look identical to Figure \ref{fig:chain-experiment-graph},
+except it would be 10000 blocks long.
+It is not pictured as it is impractical to picture a chain of this length.
 As can be seen in the plots, MultiChain has no problem running for a longer period of time.
 
 \begin{figure}
