Ewout revisions: preface introduction

--- a/preface.tex
+++ b/preface.tex
@@ -4,12 +4,12 @@ The huge increase in Bitcoin adoption,
 due to the increase in uncertainty in the security of traditional currency 
 after the financial crisis in 2008, 
 is only rivaled by the speculation of the enormous possibilities 
-of the underlying technology of the block chain.
+of the underlying technology, the block chain.
 The block chain is the first technology, seen with real world adoption,
 that allows to register transactions without a trusted third party.
 The block chain has several limitations in scalability
-that will limit Bitcoins in fully replacing traditional currency.
-It limits block chain as a scalable base for a large scale reputation system,
+that will limit Bitcoin in fully replacing traditional currency.
+It also limits block chain as a scalable base for a large scale reputation system,
 similar to a digital currency, with vast amounts of transactions.
 These developments provide motivation to research the properties and possibilities of a new distributed data structure:
 MultiChain.
