--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction}
 \label{chp:introduction}
-Tribler is a peer-to-peer file sharing program developed at the Delft University of Technology for research purposes.
-Tribler was started in 2008.
+Tribler is a peer-to-peer file sharing software developed at the Delft University of Technology for research purposes.
+Tribler was started in 2001.
 Tribler expands the BitTorrent protocol and has added multiple improvements on this protocol.
 The focus of Tribler is two fold:
 \begin{itemize}
@@ -9,10 +9,10 @@ The focus of Tribler is two fold:
     \item Make it impossible to shut Tribler down without shutting down the infrastructure of the Internet itself down.
 \end{itemize}
 
-A fully distributed program, not relying on any central component, is needed to achieve these goals.
-Tribler has been designed and build using this methodology\cite{Pouwelse-tribler}\cite{Bakker-tribler}.
+A fully distributed program, without relying on any central component, is only able to achieve these goals.
+Tribler has been designed and build with this focus\cite{Pouwelse-tribler}\cite{Bakker-tribler}.
 A distributed network requires collaboration of it participants, called peers, to achieve success.
-A screenshot of Tribler can be seen in Figure \ref{fig:tribler-screenshot}
+A screenshot of Tribler can be seen in Figure \ref{fig:tribler-screenshot}.
 This master's thesis was conducted as part of the research mission to improve the collaboration of peers within Tribler.
 
 \begin{figure}
@@ -24,56 +24,56 @@ This master's thesis was conducted as part of the research mission to improve th
 \section{Tribler}
 In peer-to-peer file sharing a node called a seeder uploads parts
 of a file to another node, the downloader.
-The role of being a seeder and downloader constantly changes
+The seeders and downloaders constantly change
 and a node can be both at the same time for different, parallel connections.
 A seeder can become a downloader when he wishes to download other files
 and downloaders can become seeders,
-when they posses a file someone else wants.
-The ratio between the total size downloaded and uploaded is called the seeding ratio\cite{Cohen-bittorrent}.
+when they posses a different file someone else wants.
+The ratio between the total data downloaded and uploaded is called the seeding ratio\cite{Cohen-bittorrent}.
 
 Uploading can be seen as an interaction of one node helping another node.
 Such interactions come at the cost of consuming bandwidth for both parties.
 However, there is only direct benefit for the downloader.
 The downloader receives a file he wants.
 There is no direct barter between the seeder and downloader.
-As the seeder does not get anything in return for uploading the file.
-Although it can happen by chance that a downloader is also a seeder directly to the original seeder
-this is unlikely\cite{Lai-Incentives}.
+Because the seeder does not get anything in return for uploading the file.
+With a very small chance, can a downloader also be a seeder for the original seeder\cite{Lai-Incentives}.
 
+Both high availability and high download speeds result in a higher utility for the downloaders.
 If everyone contributes, files become more available and are downloaded at higher speed.
 This claim is supported by measurements taken in private communities
 \cite{meulpolder-privatecommunities}.
 In private communities, high seeding ratios are enforced by a tracker.
-Trackers are servers where nodes in a peer-to-peer network are connected to each other,
+Trackers are servers where nodes in a peer-to-peer network are introduced to each other,
 so that they can upload and download from each other\cite{cohen-titfortat}.
 This tracker can be seen as a central, third party.
-Both high availability and high download speeds result in a higher utility for the downloaders.
-But currently freeriding in these networks takes places in high quantities\cite{Adar-Freeriding}.
-BitTorrent uses a Tit-for-Tat strategy to stop freeriding,
-but this strategy does not effectively stop abuse\cite{Pouwelse-tribler}.
-The Tit-for-Tat strategy is to only provide help to peers to peers that return this help\cite{cohen-titfortat}.
 
+Btt urrently freeriding in these networks takes places in high quantities in public networks\cite{Adar-Freeriding}.
+BitTorrent uses a Tit-for-Tat strategy\cite{cohen-titfortat} to stop freeriding,
+but this strategy does not effectively stop abuse\cite{Pouwelse-tribler}.
+The Tit-for-Tat strategy is to only provide help to peers to peers that return this help.
 
 Tribler wants to achieve a high global seeding ratio by making it beneficial to have such a ratio.
-Nodes can award each other with higher cooperation if a node has a reputation itself of being cooperative.
-This requires a tamper-proof interaction history to base reputation on in a network.
+Nodes can award each other with higher cooperation if a node has a reputation of being cooperative.
+This requires a tamper-proof transaction history capturing previous transactions to base reputation on.
+This history has to be available in the network.
 Those contributing more receive more help in return,
 and malicious nodes cannot abuse the network by tampering with the interaction history.
 
-Tribler has recently implemented anonymous connections using onion routing \\\cite{Plak-anonymous}\cite{ruigrok-anonymous}\cite{tanaskoski-anonymous}.
+Within Tribler anonymous connections have been implemented recently using onion routing \\\cite{Plak-anonymous}\cite{ruigrok-anonymous}\cite{tanaskoski-anonymous}.
 This feature allows downloaders to become indistinguishable from other users in the network.
-But every data packet has to be forwarded
+Every data packet has to be forwarded
 by a number of intermediate hops between the downloader and seeder\cite{Plak-anonymous}\cite{tanaskoski-anonymous}.
 The total cost of bandwidth per file is increased,
 but also the number of nodes helping a single node downloading a file increases.
-This increases the necessity of an incentive system to reward collaboration.
+The increase in nodes working together increases the necessity of an incentive system to reward collaboration.
 
 Dispersy is middleware for data dissemination in a network.
 Dispersy is used heavily within Tribler and is maintained by the Tribler organisation.
-MultiChain is build upon Dispersy.
-Dispersy can be used to exchange data between two specific nodes\cite{zeilemaker-dispersy}.
+Our work is build upon Dispersy.
+Dispersy is used to exchange data between two specific nodes\cite{zeilemaker-dispersy}.
 Functionality was added to Dispersy during the thesis.
-These additions are described in chapter \ref{chapt:design}.
+The additions are described in chapter \ref{chapt:design}.
 
 \section{Document structure}
 In chapter 1 we give an overview of Tribler and the organization that develops Tribler.
