--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -358,6 +358,14 @@
       howpublished = {\url{https://en.bitcoin.it/wiki/Scalability}}
 }
 
+@MISC{bitcoin-difficulty,
+      author = {Bitcoinwiki},
+      title = {Difficulty},
+      month = {December},
+      year = {2015},
+      howpublished ={\url{https://en.bitcoin.it/wiki/Difficulty}}
+}
+
 
 @misc{andresen-blocksize,
   title={Bitcoin Improvement Proposal 0101: Increase maximum block size},
