--- a/relatedWork/blockChain.tex
+++ b/relatedWork/blockChain.tex
@@ -27,7 +27,7 @@ The first part is the public key of the new owner of the bitcoin.
 The hash of the whole, previous transaction and the public key of the new owner is concatenated.
 This concatenation is hashed and this hash is the second part of the transaction.
 The final part is the signature by the current owner of this new hash.
-Inclusion of the hash of the previous transaction chains every transaction to the previous transaction.
+Inclusion of the hash of the previous transaction chains a transaction to the previous transaction.
 
 The previous transaction is a transaction of the same bitcoin.
 The ownership of the bitcoin by the current owner can be verified
@@ -56,9 +56,9 @@ A diagram can be seen in Figure \ref{fig:bt-block-chain} of the block chain.
 
 These blocks in the block chain are created by nodes in the network, so called miners.
 A miner receives transactions from other nodes in the Bitcoin network.
-An attacker can malicously transmit transactions to double spend a bitcoin he owns or does not have.
+An attacker could malicously transmit transactions to double spend a bitcoin he owns or does not have.
 So every transaction is verified on arrival at a node.
-Any transaction that double spends a bitcoin is just dropped by the node.
+Any transaction that double spends a bitcoin is simply dropped by the node.
 No penalty is awarded to the malicous attacker.
 
 The transactions are received in a non deterministic way induced by network characteristics.
@@ -73,7 +73,7 @@ Miners have to find the correct nonce for their block and this is a proof of wor
 
 However, miners can still find a valid nonce at approximately the same time
 and notify parts of the network of their newly found block.
-This leaves the network again in an inconsisted state.
+This also leaves the network in an inconsisted state.
 Multiple versions of the next block attached to the previous block can be seen as branches.
 
 To solve this inconsistency, Bitcoin nodes save both branches and continue using the longest branch.
@@ -82,12 +82,13 @@ More nodes will dedicate compute power to extend this branch and the growth rate
 The faster growth rate will ensure that the branch will be adopted by the network as a whole.
 The smaller branch is abandoned and the blocks are orphaned.
 
-The amount of zeros needed in the hash is adjusted to compensate for the fluctuating speed of the network to be able to find nonces.
+The amount of zeros, needed in the hash of the transaction,
+is adjusted to compensate for the fluctuating speed of the network to be able to find nonces.
 The speed of the network is called the hash rate and is the amount of hashes calculated per second.
 The amount of zeros balances the probability of branches occuring
 and the time before a new block is found,
 which in turn is how fast transactions are processed.
-The amount of zeros can be seen as the difficulty of finding the a block.
+The amount of zeros can be seen as the difficulty\cite{bitcoin-difficulty} of finding the a block.
 More zeros decreases the likelyhood a nonce will be valid.
 The estimated hash rate over time can be seen in Figure \ref{fig:hash-speed}\cite{Blockchain.info-hashspeed},
 and the difficulty in Figure \ref{fig:hash-difficulty}\cite{Blockchain.info-difficulty}.
@@ -109,8 +110,8 @@ but to the other part of the network a transaction with a different receipient.
 It is possible that both transactions will be introduced into the block chain, but in different branches by two independend miners.
 Eventually one branch will win and the attack is averted.
 
-The behaviour just described makes that a transaction can never be confirmed with full certainty.
-Another branch could always possibly over take the current longest branch.
+The behaviour just described causes that a transaction can never be confirmed with full certainty.
+The possibility always exists that another branch over takes the current longest branch.
 This makes the network vulnerable if the total compute power is owned by a malicous attacker is more than the total compute power of the honest nodes,
 even if the attacker only has control of 51\% of the compute power.
 In the end the current branch can be overtaken by a new branch started by the attacker.
