--- a/relatedWork/relatedWork.tex
+++ b/relatedWork/relatedWork.tex
@@ -2,11 +2,11 @@
 In 2007, the notion of bandwidth as a currency was introduced.
 In 2009, the first Bitcoins were mined\cite{Blockchain.info-bcs}.
 These events can be seen as the first steps in reputation or currency systems.
-Currencies have more strict rules to work than a reputation system.
+Currencies have more strict rules to work correctly than a reputation system.
 In this chapter we will discuss related work on tamper-proof interaction histories in currency or reputation systems.
 The block chain used in Bitcoin is explained extensively,
 because there is much similairity between MultiChain.
-Understanding these concepts in the block chain helps understanding MultiChain.
+Understanding the concepts in the block chain helps understanding MultiChain.
 The differences between the block chain and MultiChain will be explained in section \ref{sect:scalable-reciprocity}.
 Bartercast is the current implemented reputation system used by Tribler that will be replaced by MultiChain.
 Several other related systems are finally briefly discussed.
